--- a/Millonario Challenge/Millonario Challenge.csproj
+++ b/Millonario Challenge/Millonario Challenge.csproj
@@ -48,19 +48,27 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="ConexionBD.cs" />
+    <Compile Include="FabricaPreguntas.cs" />
     <Compile Include="Form1.cs">
       <SubType>Form</SubType>
     </Compile>
     <Compile Include="Form1.Designer.cs">
       <DependentUpon>Form1.cs</DependentUpon>
     </Compile>
+    <Compile Include="IRepositorioPreguntas.cs" />
     <Compile Include="MillonarioDBDataSet.Designer.cs">
       <AutoGen>True</AutoGen>
       <DesignTime>True</DesignTime>
       <DependentUpon>MillonarioDBDataSet.xsd</DependentUpon>
     </Compile>
+    <Compile Include="Opcion.cs" />
+    <Compile Include="Partida.cs" />
+    <Compile Include="Pregunta.cs" />
+    <Compile Include="PreguntaOpcionMultiple.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="RespuestaPartida.cs" />
+    <Compile Include="Usuario.cs" />
     <EmbeddedResource Include="Form1.resx">
       <DependentUpon>Form1.cs</DependentUpon>
     </EmbeddedResource>
