--- a/Millonario Challenge/Millonario Challenge.csproj
+++ b/Millonario Challenge/Millonario Challenge.csproj
@@ -47,9 +47,9 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="ConexionBD.cs" />
+    <Compile Include="Datos\ConexionBD.cs" />
     <Compile Include="ExportadorCsv.cs" />
-    <Compile Include="FabricaPreguntas.cs" />
+    <Compile Include="Fabrica\FabricaPreguntas.cs" />
     <Compile Include="Form1.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -80,25 +80,25 @@
     <Compile Include="FormularioRegistroUsuario.Designer.cs">
       <DependentUpon>FormularioRegistroUsuario.cs</DependentUpon>
     </Compile>
-    <Compile Include="IRepositorioPartidas.cs" />
-    <Compile Include="IRepositorioPreguntas.cs" />
-    <Compile Include="IRepositorioUsuarios.cs" />
+    <Compile Include="Datos\IRepositorioPartidas.cs" />
+    <Compile Include="Datos\IRepositorioPreguntas.cs" />
+    <Compile Include="Datos\IRepositorioUsuarios.cs" />
     <Compile Include="MillonarioDBDataSet.Designer.cs">
       <AutoGen>True</AutoGen>
       <DesignTime>True</DesignTime>
       <DependentUpon>MillonarioDBDataSet.xsd</DependentUpon>
     </Compile>
-    <Compile Include="Opcion.cs" />
-    <Compile Include="Partida.cs" />
-    <Compile Include="Pregunta.cs" />
-    <Compile Include="PreguntaOpcionMultiple.cs" />
+    <Compile Include="Modelos\Opcion.cs" />
+    <Compile Include="Modelos\Partida.cs" />
+    <Compile Include="Modelos\Pregunta.cs" />
+    <Compile Include="Modelos\PreguntaOpcionMultiple.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="RepositorioPartidasSql.cs" />
-    <Compile Include="RepositorioPreguntasSql.cs" />
-    <Compile Include="RepositorioUsuariosSql.cs" />
-    <Compile Include="RespuestaPartida.cs" />
-    <Compile Include="Usuario.cs" />
+    <Compile Include="Datos\RepositorioPartidasSql.cs" />
+    <Compile Include="Datos\RepositorioPreguntasSql.cs" />
+    <Compile Include="Datos\RepositorioUsuariosSql.cs" />
+    <Compile Include="Modelos\RespuestaPartida.cs" />
+    <Compile Include="Modelos\Usuario.cs" />
     <EmbeddedResource Include="Form1.resx">
       <DependentUpon>Form1.cs</DependentUpon>
     </EmbeddedResource>
